[gd_scene load_steps=7 format=2]

[ext_resource path="res://Ttf/pixel-unicode-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Buttons/Options/Options2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/Options/Options1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/OptionsPause.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Buttons/Options/Options3.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="Options" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 476.0
margin_top = 254.0
margin_right = 2051.0
margin_bottom = 1182.0
color = Color( 0.192157, 0.121569, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 500.0
margin_top = 282.0
margin_right = 2027.0
margin_bottom = 1154.0
color = Color( 0.117647, 0.490196, 0.490196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 664, 536 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 664, 536 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 664, 916 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 664, 916 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 558, 432 )
scale = Vector2( 0.35, 0.356667 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 556, 814 )
scale = Vector2( 0.35, 0.356667 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )

[node name="Label" type="Label" parent="."]
margin_left = 1082.0
margin_top = 280.0
margin_right = 1369.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 1 )
text = "НАСТРОЙКИ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 872.0
margin_top = 485.0
margin_right = 1243.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 1 )
text = "МУЗЫКА"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 872.0
margin_top = 875.0
margin_right = 1590.0
margin_bottom = 989.0
custom_fonts/font = SubResource( 1 )
text = "УКАЗАТЕЛЬ НА ЗАМОК"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="released" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
